<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidRpcClient</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="number1">Number1:</string>
    <string name="number2">Number2:</string>
    <string name="calculate">Calculate</string>
    <string name="text">Text:</string>
    <string name="getEcho">Get Echo</string>

</resources>